--- a/01_Piscines/PHP/D00/ex02/doft.html
+++ b/01_Piscines/PHP/D00/ex02/doft.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <div class="header">
-    <img id="title" src="resources/day_of_the_42.png" alt="day_of_the_42">
-    <img class="loupe" src="./resources/loupe.png" alt="loupe" style="width:200px; height:120px;">
+    <img id="title" title="ay_of_the_42" src="resources/day_of_the_42.png" alt="day_of_the_42">
+    <img class="loupe" title="loupe" src="./resources/loupe.png" alt="loupe" style="width:200px; height:120px;">
     <div>
       <a href="http://www.disney.com">
         <img src="./resources/reload.png" alt="reload" title="Start from the beginning">
@@ -36,12 +36,12 @@
       <img class="item" src="resources/book.png" alt="book">
       <img class="item" src="resources/towel.png" alt="towel">
       <div id="brick" class="item">
-	  	<img class="special_brick" src="resources/brick.jpg" alt="brick">
-	  	<img class="special_brick" src="resources/brick.jpg" alt="brick">
-	  	<img class="special_brick" src="resources/brick.jpg" alt="brick">
-	  	<img class="special_brick" src="resources/brick.jpg" alt="brick">
-	  	<img class="special_brick" src="resources/brick.jpg" alt="brick">
-	  	<img class="special_brick" src="resources/brick.jpg" alt="brick">
+	  	<img title="brick" class="special_brick" src="resources/brick.jpg" alt="brick">
+	  	<img title="brick" class="special_brick" src="resources/brick.jpg" alt="brick">
+	  	<img title="brick" class="special_brick" src="resources/brick.jpg" alt="brick">
+	  	<img title="brick" class="special_brick" src="resources/brick.jpg" alt="brick">
+	  	<img title="brick" class="special_brick" src="resources/brick.jpg" alt="brick">
+	  	<img title="brick" class="special_brick" src="resources/brick.jpg" alt="brick">
 	  </div>
       <div class="item"></div>
       <div class="item"></div>
