--- a/01_Piscines/PHP/D00/ex00/Basics.html
+++ b/01_Piscines/PHP/D00/ex00/Basics.html
@@ -12,6 +12,9 @@
 			color: white;
 			text-align: center;
 		}
+		h1{
+			font-size: 60px;
+		}
 		#copyright {
 			text-align: right;
 			font-style: italic;
@@ -27,7 +30,7 @@
 	</style>
   </head>
   <body>
-	  <h1 id="title">&hearts; Shopping</h1>
+		<h1 id="title">&hearts; Shopping</h1>
 
 	  <div class="shop">
 		<img src="https://images-na.ssl-images-amazon.com/images/G/01/6pm/logos/6pm-Logo-2x._V285053989_.png" alt="6pm">
